--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
+    <color name="colorPrimary">#FAFBFD</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
@@ -8,4 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#1763EA</color>
+    <color name="home_background">#FAFBFD</color>
+    <color name="bottomNavColor">#FFFFFF</color>
+    <color name="bottomNavSelectedColor">#1763EA</color>
+    <color name="colorAccent">#909CAE</color>
 </resources>
