--- a/app/src/main/res/layout/buyer_item.xml
+++ b/app/src/main/res/layout/buyer_item.xml
@@ -16,12 +16,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/cv_itemRoot"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
+            app:strokeWidth="0.1dp"
+            android:elevation="@dimen/cardView_home_elevation"
+            app:strokeColor="@color/colorItemListDetails"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -136,6 +139,6 @@
                     tools:listitem="@layout/item_type_details" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
