--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="cardView_home_elevation">8dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="trading_items_margin">10dp</dimen>
     <dimen name="types_items_margin">5dp</dimen>
