--- a/app/src/main/res/layout/buyer_item.xml
+++ b/app/src/main/res/layout/buyer_item.xml
@@ -109,10 +109,12 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/cl_favorite"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
                         <com.google.android.material.imageview.ShapeableImageView
+                            android:id="@+id/siv_favorite"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@drawable/ic_favorite_not_selected"
