string and colors added for before login screens

--- a/app/src/main/res/layout/fragment_new_password.xml
+++ b/app/src/main/res/layout/fragment_new_password.xml
@@ -17,16 +17,18 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/welcome_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
+        android:layout_marginEnd="20dp"
         android:fontFamily="@font/mulish_regular"
-        android:text="Your new password must be different from\nprevious used passwords."
+        android:text="@string/new_password"
         android:textAlignment="textStart"
-        android:textColor="#797A73"
+        android:textColor="@color/login_continue"
         android:textSize="14sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints" />
 
@@ -57,9 +59,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="10dp"
-            android:hint="Password"
-            android:textColorHint="#31322D"
-            app:hintTextColor="#31322D"
+            android:hint="@string/password"
+            android:textColorHint="@color/compare_gray"
+            app:hintTextColor="@color/edit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/img_password"
@@ -75,7 +77,7 @@
                 android:fontFamily="@font/mulish_regular"
                 android:inputType="textPassword"
                 android:singleLine="true"
-                android:textColor="#8F9187"
+                android:textColor="@color/edit"
                 android:textSize="15sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -108,9 +110,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="10dp"
-            android:hint="Confirm Password"
-            android:textColorHint="#31322D"
-            app:hintTextColor="#31322D"
+            android:hint="@string/confirm_password"
+            android:textColorHint="@color/compare_gray"
+            app:hintTextColor="@color/edit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/img_confirm_password"
@@ -126,7 +128,7 @@
                 android:fontFamily="@font/mulish_regular"
                 android:inputType="textPassword"
                 android:singleLine="true"
-                android:textColor="#8F9187"
+                android:textColor="@color/edit"
                 android:textSize="15sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -140,7 +142,7 @@
         android:layout_marginEnd="20dp"
         android:background="@drawable/rectangle_blue"
         android:elevation="5dp"
-        android:text="UPDATE PASSWORD"
+        android:text="@string/update_password"
         android:textAllCaps="true"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
