--- a/app/src/main/res/layout/fragment_create_account.xml
+++ b/app/src/main/res/layout/fragment_create_account.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,8 +11,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/mulish_regular"
-            android:text="Create your own account to explore the Cars and
-Buy your Dream one!"
+            android:text="@string/create_own_account"
             android:textAlignment="textStart"
             android:textColor="#797A73"
             android:textSize="14sp"
@@ -32,6 +32,7 @@ Buy your Dream one!"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="15dp"
+            android:scrollbars="horizontal"
             app:layout_constraintBottom_toTopOf="@+id/gl_bottom"
             app:layout_constraintTop_toBottomOf="@+id/welcome_tv">
 
@@ -68,9 +69,9 @@ Buy your Dream one!"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="5dp"
-                        android:hint="Full Name"
-                        android:textColorHint="#31322D"
-                        app:hintTextColor="#31322D"
+                        android:hint="@string/full_name"
+                        android:textColorHint="@color/compare_gray"
+                        app:hintTextColor="@color/edit"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/img_email"
@@ -83,7 +84,7 @@ Buy your Dream one!"
                             android:background="@null"
                             android:fontFamily="@font/mulish_regular"
                             android:singleLine="true"
-                            android:textColor="#8F9187"
+                            android:textColor="@color/edit"
                             android:textSize="15sp" />
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -117,9 +118,9 @@ Buy your Dream one!"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="5dp"
-                        android:hint="Business Name"
-                        android:textColorHint="#31322D"
-                        app:hintTextColor="#31322D"
+                        android:hint="@string/business_name"
+                        android:textColorHint="@color/compare_gray"
+                        app:hintTextColor="@color/edit"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/img_business"
@@ -132,7 +133,7 @@ Buy your Dream one!"
                             android:background="@null"
                             android:fontFamily="@font/mulish_regular"
                             android:singleLine="true"
-                            android:textColor="#8F9187"
+                            android:textColor="@color/edit"
                             android:textSize="15sp" />
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -166,7 +167,7 @@ Buy your Dream one!"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="5dp"
-                        android:hint="Business Email"
+                        android:hint="@string/business_email"
                         android:textColorHint="#31322D"
                         app:hintTextColor="#31322D"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -181,7 +182,7 @@ Buy your Dream one!"
                             android:background="@null"
                             android:fontFamily="@font/mulish_regular"
                             android:singleLine="true"
-                            android:textColor="#8F9187"
+                            android:textColor="@color/edit"
                             android:textSize="15sp" />
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -204,7 +205,7 @@ Buy your Dream one!"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="25dp"
-                        android:src="@drawable/ic_email"
+                        android:src="@drawable/ic_smartphone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -215,7 +216,7 @@ Buy your Dream one!"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="5dp"
-                        android:hint="Email"
+                        android:hint="@string/business_phone"
                         android:textColorHint="#31322D"
                         app:hintTextColor="#31322D"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -245,7 +246,7 @@ Buy your Dream one!"
                     android:layout_marginEnd="20dp"
                     android:background="@drawable/rectangle"
                     android:elevation="5dp"
-                    app:layout_constraintTop_toBottomOf="@+id/cl_business_email"
+                    app:layout_constraintTop_toBottomOf="@+id/cl_business_phone"
                     tools:ignore="MissingConstraints">
 
                     <androidx.appcompat.widget.AppCompatTextView
@@ -254,8 +255,7 @@ Buy your Dream one!"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="25dp"
                         android:layout_marginTop="15dp"
-                        android:text="Business Registration Document"
-                        android:textColor="#827D7C"
+                        android:hint="@string/business_registration"                        android:textColor="#827D7C"
                         android:textSize="13sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -290,7 +290,7 @@ Buy your Dream one!"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/mulish_regular"
-                            android:text="Upload File"
+                            android:text="@string/upload_file"
                             android:textColor="#00B99F"
                             android:textSize="12sp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -357,7 +357,7 @@ Buy your Dream one!"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="5dp"
-                        android:hint="ABN"
+                        android:hint="@string/abn"
                         android:textColorHint="#31322D"
                         app:hintTextColor="#31322D"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -372,7 +372,7 @@ Buy your Dream one!"
                             android:background="@null"
                             android:fontFamily="@font/mulish_regular"
                             android:singleLine="true"
-                            android:textColor="#8F9187"
+                            android:textColor="@color/edit"
                             android:textSize="15sp" />
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -443,7 +443,7 @@ Buy your Dream one!"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="5dp"
-                        android:hint="Post Code"
+                        android:hint="@string/post_code"
                         android:textColorHint="#31322D"
                         app:hintTextColor="#31322D"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -458,7 +458,7 @@ Buy your Dream one!"
                             android:background="@null"
                             android:fontFamily="@font/mulish_regular"
                             android:singleLine="true"
-                            android:textColor="#8F9187"
+                            android:textColor="@color/edit"
                             android:textSize="15sp" />
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -491,7 +491,7 @@ Buy your Dream one!"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="10dp"
-                        android:hint="Set Password"
+                        android:hint="@string/set_password"
                         android:textColorHint="#31322D"
                         app:hintTextColor="#31322D"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -529,7 +529,7 @@ Buy your Dream one!"
             android:layout_marginEnd="20dp"
             android:background="@drawable/rectangle_blue"
             android:elevation="5dp"
-            android:text="Login"
+            android:text="@string/continuee"
             android:textAllCaps="true"
             android:textColor="#FFFFFF"
             android:textSize="15sp"
@@ -544,9 +544,9 @@ Buy your Dream one!"
             android:layout_marginTop="30dp"
             android:fontFamily="@font/mulish_regular"
             android:singleLine="true"
-            android:text="Or Login With"
+            android:text="@string/login_with"
             android:textAlignment="textStart"
-            android:textColor="#7D7E76"
+            android:textColor="@color/forgot"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -585,9 +585,9 @@ Buy your Dream one!"
             android:layout_marginTop="50dp"
             android:fontFamily="@font/mulish_regular"
             android:singleLine="true"
-            android:text="Don’t have an Account?"
+            android:text="@string/have_account"
             android:textAlignment="textStart"
-            android:textColor="#31322D"
+            android:textColor="@color/compare_gray"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/gl_center"
@@ -601,9 +601,9 @@ Buy your Dream one!"
             android:layout_marginTop="50dp"
             android:fontFamily="@font/mulish_regular"
             android:singleLine="true"
-            android:text="Login Now"
+            android:text="@string/login_now"
             android:textAlignment="textStart"
-            android:textColor="#00B99F"
+            android:textColor="@color/reset"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@+id/gl_center"
