--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,19 +14,20 @@
         app:layout_constraintGuide_percent=".3" />
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/welcome_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
         android:fontFamily="@font/mulish_regular"
-        android:text="Enter your email associated with your account and
-we’ll send a link for your Reset password."
+        android:text="@string/forgot_pass"
         android:textAlignment="textStart"
         android:textColor="#797A73"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        tools:ignore="MissingConstraints" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_login"
@@ -54,9 +56,9 @@ we’ll send a link for your Reset password."
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="5dp"
-            android:hint="Email"
-            android:textColorHint="#31322D"
-            app:hintTextColor="#31322D"
+            android:hint="@string/email"
+            android:textColorHint="@color/compare_gray"
+            app:hintTextColor="@color/edit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/img_email"
@@ -69,7 +71,7 @@ we’ll send a link for your Reset password."
                 android:background="@null"
                 android:fontFamily="@font/mulish_regular"
                 android:singleLine="true"
-                android:textColor="#8F9187"
+                android:textColor="@color/edit"
                 android:textSize="15sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -83,7 +85,7 @@ we’ll send a link for your Reset password."
         android:layout_marginEnd="20dp"
         android:background="@drawable/rectangle_blue"
         android:elevation="5dp"
-        android:text="Submit"
+        android:text="@string/submit"
         android:textAllCaps="true"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
@@ -105,9 +107,9 @@ we’ll send a link for your Reset password."
         android:layout_marginTop="50dp"
         android:fontFamily="@font/mulish_regular"
         android:singleLine="true"
-        android:text="Don’t have an Account?"
+        android:text="@string/have_account"
         android:textAlignment="textStart"
-        android:textColor="#31322D"
+        android:textColor="@color/compare_gray"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/gl_center"
@@ -121,9 +123,9 @@ we’ll send a link for your Reset password."
         android:layout_marginTop="50dp"
         android:fontFamily="@font/mulish_regular"
         android:singleLine="true"
-        android:text="Create Account"
+        android:text="@string/create_account"
         android:textAlignment="textStart"
-        android:textColor="#00B99F"
+        android:textColor="@color/reset"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@+id/gl_center"
