--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,12 @@
     <color name="colorCardFeaturedText">#00B99F</color>
     <color name="colorItemListDetails">#9DA0A5</color>
     <color name="colorItemColor">#1763EA</color>
+
+    <color name="welcome_gray">#818478</color>
+    <color name="compare_gray">#31322D</color>
+    <color name="login_continue">#797A73</color>
+    <color name="edit">#8F9187</color>
+    <color name="forgot">#7D7E76</color>
+    <color name="reset">#00B99F</color>
+
 </resources>
