--- a/app/src/main/res/layout/activity_login_control.xml
+++ b/app/src/main/res/layout/activity_login_control.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/toolbar"
-            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
+            app:titleTextAppearance="@style/MyTitleTextApperance"
             tools:ignore="MissingConstraints" />
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="match_parent"
