--- a/app/src/main/res/layout/fragment_new_password.xml
+++ b/app/src/main/res/layout/fragment_new_password.xml
@@ -1,151 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.login.LoginControlActivity">
-
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_center_hr"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".3" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/welcome_tv"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="20dp"
-        android:fontFamily="@font/mulish_regular"
-        android:text="@string/new_password"
-        android:textAlignment="textStart"
-        android:textColor="@color/login_continue"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints" />
+    xmlns:tools="http://schemas.android.com/tools">
+        <data>
+            <variable
+                name="motorVM"
+                type="com.app.compare_my_trade.ui.MotorViewModel" />
+            <import type="android.view.View" />
+        </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_password"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/rectangle"
-        android:elevation="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/gl_center_hr">
+        android:layout_height="match_parent"
+        tools:context=".ui.login.LoginControlActivity">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/img_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:src="@drawable/ic_padlock"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/pass_edt"
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gl_center_hr"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent=".3" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/welcome_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="10dp"
-            android:hint="@string/password"
-            android:textColorHint="@color/compare_gray"
-            app:hintTextColor="@color/edit"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="20dp"
+            android:fontFamily="@font/mulish_regular"
+            android:text="@string/new_password"
+            android:textAlignment="textStart"
+            android:textColor="@color/login_continue"
+            android:textSize="14sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/img_password"
-            app:layout_constraintTop_toTopOf="parent"
-            app:passwordToggleDrawable="@drawable/show_password_selector"
-            app:passwordToggleEnabled="true">
-
-            <EditText
-                android:id="@+id/password_edt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:fontFamily="@font/mulish_regular"
-                android:inputType="textPassword"
-                android:singleLine="true"
-                android:textColor="@color/edit"
-                android:textSize="15sp" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_confirm_password"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/rectangle"
-        android:elevation="5dp"
-        app:layout_constraintTop_toBottomOf="@+id/cl_password">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/img_confirm_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:src="@drawable/ic_padlock"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            tools:ignore="MissingConstraints" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/confirm_pass_edt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_password"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="10dp"
-            android:hint="@string/confirm_password"
-            android:textColorHint="@color/compare_gray"
-            app:hintTextColor="@color/edit"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/img_confirm_password"
-            app:layout_constraintTop_toTopOf="parent"
-            app:passwordToggleDrawable="@drawable/show_password_selector"
-            app:passwordToggleEnabled="true">
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/rectangle"
+            android:elevation="5dp"
+            app:layout_constraintBottom_toTopOf="@+id/gl_center_hr">
 
-            <EditText
-                android:id="@+id/confirm_password_edt"
-                android:layout_width="match_parent"
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/img_password"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@null"
-                android:fontFamily="@font/mulish_regular"
-                android:inputType="textPassword"
-                android:singleLine="true"
-                android:textColor="@color/edit"
-                android:textSize="15sp" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_marginStart="25dp"
+                android:src="@drawable/ic_padlock"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/pass_edt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="10dp"
+                android:hint="@string/password"
+                android:textColorHint="@color/compare_gray"
+                app:hintTextColor="@color/edit"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/img_password"
+                app:layout_constraintTop_toTopOf="parent"
+                app:passwordToggleDrawable="@drawable/show_password_selector"
+                app:passwordToggleEnabled="true">
+
+                <EditText
+                    android:id="@+id/password_edt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:fontFamily="@font/mulish_regular"
+                    android:inputType="textPassword"
+                    android:singleLine="true"
+                    android:textColor="@color/edit"
+                    android:textSize="15sp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_confirm_password"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/rectangle"
+            android:elevation="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/cl_password">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/img_confirm_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:src="@drawable/ic_padlock"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/confirm_pass_edt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="10dp"
+                android:hint="@string/confirm_password"
+                android:textColorHint="@color/compare_gray"
+                app:hintTextColor="@color/edit"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/img_confirm_password"
+                app:layout_constraintTop_toTopOf="parent"
+                app:passwordToggleDrawable="@drawable/show_password_selector"
+                app:passwordToggleEnabled="true">
+
+                <EditText
+                    android:id="@+id/confirm_password_edt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:fontFamily="@font/mulish_regular"
+                    android:inputType="textPassword"
+                    android:singleLine="true"
+                    android:textColor="@color/edit"
+                    android:textSize="15sp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/login_btn"
+            android:layout_width="0dp"
+            android:layout_height="46dp"
+            android:layout_marginTop="45dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/rectangle_blue"
+            android:elevation="5dp"
+            android:text="@string/update_password"
+            android:textAllCaps="true"
+            android:textColor="#FFFFFF"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cl_confirm_password"
+            app:layout_constraintStart_toStartOf="@+id/welcome_tv" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/login_btn"
-        android:layout_width="0dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="45dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/rectangle_blue"
-        android:elevation="5dp"
-        android:text="@string/update_password"
-        android:textAllCaps="true"
-        android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cl_confirm_password"
-        app:layout_constraintStart_toStartOf="@+id/welcome_tv"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
