--- a/app/src/main/res/layout/fragment_new_password.xml
+++ b/app/src/main/res/layout/fragment_new_password.xml
@@ -142,7 +142,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/login_btn"
+            android:id="@+id/update_btn"
             android:layout_width="0dp"
             android:layout_height="46dp"
             android:layout_marginTop="45dp"
