--- a/app/src/main/res/layout/fragment_create_account.xml
+++ b/app/src/main/res/layout/fragment_create_account.xml
@@ -538,7 +538,7 @@
         </androidx.core.widget.NestedScrollView>
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/login_btn"
+            android:id="@+id/continue_btn"
             android:layout_width="0dp"
             android:layout_height="46dp"
             android:layout_marginTop="30dp"
@@ -548,6 +548,7 @@
             android:text="@string/continuee"
             android:textAllCaps="true"
             android:textColor="#FFFFFF"
+            android:onClick="@{(v)-> motorVM.onClickAction(v)}"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/welcome_tv"
@@ -566,7 +567,7 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/login_btn" />
+            app:layout_constraintTop_toBottomOf="@+id/continue_btn" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_google"
