--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,7 +16,8 @@
             app:destination="@id/forgotpasswordfragment" />
         <action
             android:id="@+id/action_loginfragment_to_createAccountFragment"
-            app:destination="@id/createAccountFragment" />
+            app:destination="@id/createAccountFragment"
+            />
 
     </fragment>
     <fragment
@@ -41,7 +42,9 @@
         >
         <action
             android:id="@+id/action_newPasswordFragment_to_loginfragment"
-            app:destination="@id/loginfragment" />
+            app:destination="@id/loginfragment"
+            app:popUpTo="@id/loginfragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/createAccountFragment"
@@ -51,6 +54,8 @@
         >
         <action
             android:id="@+id/action_createAccountFragment_to_loginfragment"
-            app:destination="@id/loginfragment" />
+            app:destination="@id/loginfragment"
+            app:popUpTo="@id/loginfragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
