--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,6 +22,8 @@
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         android:background="@color/bottomNavColor"
+        app:itemTextAppearanceActive="@style/menu_text_style"
+        app:itemTextColor="@drawable/bottom_navigation_color_selector"
         android:nestedScrollingEnabled="true"
         app:elevation="16dp"
         app:itemIconTint="@drawable/bottom_navigation_color_selector"
