--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -37,10 +37,11 @@
 <!--            </com.google.android.material.appbar.AppBarLayout>-->
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_fragment_host"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/appbar">
+                app:layout_constraintTop_toTopOf="@+id/appbar">
 
                 <fragment
                     android:id="@+id/nav_host_fragment_activity_home"
