--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.ui.FavoriteFragment">
+    tools:context=".ui.postauthenticationui.ui.FavoriteFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
