--- a/app/src/main/res/layout/fragment_more_options.xml
+++ b/app/src/main/res/layout/fragment_more_options.xml
@@ -4,18 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.ui.dashboard.DashboardFragment">
+    tools:context=".ui.postauthenticationui.ui.moreoptions.MoreOptionsFragment">
 
     <TextView
-        android:id="@+id/text_dashboard"
+        android:id="@+id/text_more_options"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/under_development"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:text="@string/under_development"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
