--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,20 +4,22 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        app:showAsAction="collapseActionView|withText"
+        android:icon="@drawable/ic_home"
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        app:showAsAction="collapseActionView"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_manage_bids"
+        android:icon="@drawable/ic_manage_bid"
+        android:title="@string/title_manage_bids" />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        app:showAsAction="collapseActionView"
+        android:icon="@drawable/ic_notification"
         android:title="@string/title_notifications" />
+
+    <item
+        android:id="@+id/navigation_more"
+        android:icon="@drawable/ic_more_option"
+        android:title="@string/title_more_option" />
 
 </menu>
