--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="trading_items_margin">10dp</dimen>
     <dimen name="types_items_margin">5dp</dimen>
     <dimen name="text13sp">13sp</dimen>
+    <dimen name="text11sp">11sp</dimen>
     <dimen name="text12sp">12sp</dimen>
     <dimen name="text14sp">14sp</dimen>
 </resources>
