--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,11 +5,28 @@
         <item name="colorPrimary">#00000000</item>
         <item name="colorPrimaryDark">@color/colorPrimary</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="actionMenuTextAppearance">@style/action_menu_text_style</item>
+        <item name="android:actionMenuTextAppearance">@style/action_menu_text_style</item>
         <!-- Customize your theme here. -->
+    </style>
+    <style name="action_menu_text_style" parent="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Menu">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/colorToolbarTitle</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/mulish_bold</item>
+    </style>
+
+    <style name="menu_text_style">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/colorItemColor</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/mulish_bold</item>
     </style>
 
     <style name="OutlinedRoundedBox" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded</item>
+        <item name="shapeAppearanceOverlay">
+            @style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded
+        </item>
     </style>
 
     <style name="rounded_corner">
@@ -22,8 +39,8 @@
     </style>
 
     <style name="TextInputLayoutNoBorder" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-<!--        <item name="errorIconDrawable">@null</item>-->
-<!--        <item name="errorIconTint">@null</item>-->
+        <!--        <item name="errorIconDrawable">@null</item>-->
+        <!--        <item name="errorIconTint">@null</item>-->
         <item name="hintEnabled">false</item>
         <item name="boxBackgroundMode">none</item>
     </style>
@@ -33,20 +50,25 @@
         <item name="windowNoTitle">true</item>
         <item name="fontFamily">@font/mulish_regular</item>
     </style>
+
     <style name="DrawerIconStyle" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="color">#31322D</item>
     </style>
+
     <style name="AppTheme.NoActionBar.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
     <style name="Theme.Compare_My_Trade.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
     <style name="ShapeAppearanceOverlay.App.CornerSize10Percent" parent="">
         <item name="cornerSize">10%</item>
     </style>
+
     <style name="AppTheme.NoActionBar.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.NoActionBar.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
