--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        android:background="@color/bottomNavColor"
+        android:background="@drawable/bottom_navigation_background"
         app:itemTextAppearanceActive="@style/menu_text_style"
         app:itemTextColor="@drawable/bottom_navigation_color_selector"
         android:nestedScrollingEnabled="true"
