--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,6 +13,10 @@
         <action
             android:id="@+id/action_navigation_home_to_favoriteFragment"
             app:destination="@id/favoriteFragment"
+            app:enterAnim="@anim/anim_enter"
+            app:exitAnim="@anim/anim_frag_fade_out"
+            app:popEnterAnim="@anim/anim_frag_fade_in"
+            app:popExitAnim="@anim/anim_exit"
             app:popUpTo="@id/navigation_home" />
     </fragment>
 
@@ -23,7 +27,12 @@
         tools:layout="@layout/fragment_manage_bids" >
         <action
             android:id="@+id/action_navigation_dashboard_to_favoriteFragment"
-            app:destination="@id/favoriteFragment" />
+            app:destination="@id/favoriteFragment"
+            app:enterAnim="@anim/anim_enter"
+            app:exitAnim="@anim/anim_frag_fade_out"
+            app:popEnterAnim="@anim/anim_frag_fade_in"
+            app:popExitAnim="@anim/anim_exit"
+            app:popUpTo="@id/navigation_manage_bids" />
     </fragment>
 
     <fragment
@@ -40,5 +49,19 @@
         android:id="@+id/navigation_more"
         android:name="com.app.compare_my_trade.ui.postauthenticationui.ui.moreoptions.MoreOptionsFragment"
         android:label="@string/title_more_option"
-        tools:layout="@layout/fragment_more_options" />
+        tools:layout="@layout/fragment_more_options" >
+        <action
+            android:id="@+id/action_navigation_more_to_aboutFragment"
+            app:destination="@id/aboutFragment"
+            app:enterAnim="@anim/anim_enter"
+            app:exitAnim="@anim/anim_frag_fade_out"
+            app:popEnterAnim="@anim/anim_frag_fade_in"
+            app:popExitAnim="@anim/anim_exit"
+            app:popUpTo="@id/navigation_more" />
+    </fragment>
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="com.app.compare_my_trade.ui.postauthenticationui.ui.AboutFragment"
+        android:label="@string/about_us"
+        tools:layout="@layout/fragment_about" />
 </navigation>
